@@ -60,6 +60,8 @@ Feature Additions:
  -- Provide CLog module interface from netmux.
  -- Pass log file sub-direction, LOGDIR, option in mux.config (and
     muxconfig.vbs) through as a command-line option.
+ -- Add pOuterUnknown parameter to CreateInstance to allow aggregation
+    to be used later. The proxy for marshalling appears to require it.
 
 
 Bug Fixes:
